wrap analytics fix

--- a/src/components/Analytics.module.css
+++ b/src/components/Analytics.module.css
@@ -1,7 +1,7 @@
 .calendar_block {
   align-items: center;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: space-between;
 }
 
