--- a/src/components/Calendar.module.css
+++ b/src/components/Calendar.module.css
@@ -3,7 +3,7 @@
   place-items: center;
   grid-auto-flow: column;
   grid-template-rows: repeat(7, 1fr);
-  grid-gap: 4px 7px;
+  grid-gap: 4px 6px;
 }
 
 .day {
@@ -11,9 +11,9 @@
   border-radius: 4px;
   color: #5d5d5d;
 
-  font-size: 12px;
+  font-size: 11px;
   line-height: 18px;
-  min-width: 20px;
+  min-width: 19px;
   text-align: center;
 }
 
